feat: implement newsletter sending functionality